--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.2",
+    "com.unity.ml-agents": "1.0.5",
     "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.purchasing": "2.0.6",
